# CppProtoNetwork

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
CppProtoNetwork_Example/: CMakeLists.txt
CppProtoNetwork_Example/CppProtoNetwork_ExampleProtocol/: CMakeLists.txt  message.proto
CppProtoNetwork_Example/src/: main.cpp
CppProtoNetwork_Test/: CMakeLists.txt
CppProtoNetwork_Test/src/: main.cpp
CppProtocolTest/: CMakeLists.txt
src/net/: auxiliary.cpp  auxiliary.h  buffer.cpp  buffer.h  bufferqueue.cpp  bufferqueue.h  client.cpp  client.h  connection.cpp  connection.h  connectionscontrol.h  iocontext.cpp  iocontext.h  lanclient.h  lanudpreceiver.cpp  lanudpreceiver.h  lanudpsender.cpp  lanudpsender.h  logger.h  network.cpp  network.h  packet.h  protobufmessage.cpp  protobufmessage.h  protobufmessagequeue.cpp  protobufmessagequeue.h  remoteclient.cpp  remoteclient.h  server.cpp  server.h  taskqueue.h  timer.cpp  timer.h
src/net/detail/: connection.cpp  connection.h
srcTest/: main.cpp
